*changes footer to new design *moves about DS text to imprint *adds new css to assorted.css *fixes image overlap on smaller screens for infoBoxGrundsteuer component

--- a/webapp/client/public/css/assorted.css
+++ b/webapp/client/public/css/assorted.css
@@ -343,23 +343,45 @@ footer {
   margin-top: var(--spacing-10);
 }
 
+@media (max-width: 768px) {
+  footer .container-fluid {
+    padding: 0;
+  }
+}
+
 .footer-inner{
   padding-left: var(--spacing-03);
   padding-right: var(--spacing-03);
   flex: 1;
+  display: flex;
+  justify-content: space-between;
 }
 
-footer li a {
+.footer-inactive{
+  color: var(--secondary-text-color);
+  cursor: default;
+  padding: var(--spacing-03);
+  font-size: var(--text-medium);
+}
+
+footer a {
   color: var(--text-color);
   display: block;
   text-decoration-color: var(--icon-default-color);
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
-footer li a:hover {
+footer a:hover {
   text-decoration-line: underline;
   text-decoration-color: var(--text-color);
   text-underline-offset: .25em;
+}
+
+footer .footer-signature a{
+  display: inline;
+  padding: 0;
+  font-size: var(--text-sb);
+  color: var(--blue-800) ;
 }
 
 .about-stl {
@@ -373,7 +395,33 @@ footer li a:hover {
   background-color: var(--bg-highlight-color);
 }
 
-footer a{
+.top-footer {
+  display: flex;
+  font-size: var(--text-s);
+  padding: 8px 0;
+}
+
+@media (max-width: 1024px) {
+  .top-footer .footer-inner {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .top-footer {
+    padding: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .top-footer .footer-inner .row {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+footer a {
   text-decoration: none;
 }
 
@@ -385,10 +433,36 @@ footer a{
   transition: all .3s ease;
 }
 
+.footer-signature {
+  padding: var(--spacing-03);
+  text-decoration-color: var(--icon-default-color);
+  color: var(--grey-900);
+  transition: all 0.3s ease;
+}
+
+.top-footer a {
+  padding: var(--spacing-03);
+  display: block;
+  text-decoration-color: var(--icon-default-color);
+  color: var(--text-color);
+  transition: all 0.3s ease;
+  font-size: var(--text-medium);
+}
+
+footer .footer-signature a:hover{
+  text-decoration-color: var(--blue-800);
+}
+
 .footer-footer a:hover {
   text-decoration-line: underline;
   text-decoration-color: var(--text-color);
   text-underline-offset: .25em;
+}
+
+.top-footer a:hover {
+  text-decoration-line: underline;
+  text-decoration-color: var(--text-color);
+  text-underline-offset: 0.25em;
 }
 
 .logo-ds4g {
@@ -414,12 +488,12 @@ footer a{
 
 @media (max-width: 1024px) {
   .section-intro {
-    margin-top: var( --spacing-09);
-  }  
+    margin-top: var( --spacing-09); 
+  }
 
   .header-navigation, .header-navigation + .section-intro {
       margin-top: var( --spacing-01);
-  }  
+  }
 }
 
 .explanatory-button-text {
